	- Fixed bug when trying to fly while in vehicle, flying in vehicles are blocked so there won't be any more bugs.
	- Fixed player explosion not being synced properly with players.
	- Fixed a crash related to lara's hair.
	- Fixed bleeding windows when destroying them.
	- Fixed weird and wrong lara meshswaps in certain situations.
	- Fixed several crashes when loading a level.
	- Fixed and improved exploding death sync of players and AI entities.
	- Implemented TR4/TR5 sprint to crouch (this feature is available in all tr3 original and custom levels since the animation is in all .tr2 files).
	- Implemented setMinecartTurnModifier to modify the block length of the minecart turn angle, for example you can set it to 1 and it will take 4 blocks instead of 3 to complete a turn.
	- Released "anim_exporter" tool to export animations from .tr2 files in binary format compatible with TombMP.
	- Implemented loadAnimation which will allow people to load their own exported animations (using anim_exporter) to ANY TR3 level they want.
	- Removed the limit of 50 static objects per level. It will load as many objects as the level file contains.
	- Increased active AI limit from 5 (for lot AI) and 12 (for non-lot AI) to 256 (more than enough).
	- Added new several client and server scripting functions:
		· setCameraPosition.
		· getCameraRoom.
		· setCameraRoom.
		· getCameraType.
		· setCameraType.
		· getCameraItem.
		· setCameraItem.
		· getCameraTarget.
		· setCameraTarget.
		· getItemFromEntity.
		· getItemsTable (client and server).
		· asEntity (client and server).
		· isEntity (client and server).
		· destroyEntity (added in server too).
		· killCreature.
		· getItemGravityStatus.
		· getItemGoalAnim.
		· getItemCurrentAnim.
		· getItemAnimID.
		· getItemAnimFrame.
		· getPlayerHeadRotation.
		· getPlayerTorsoRotation.
		· getPlayerArmFrameNumber.
		· setMinecartTurnModifier.
		· loadAnimation.
		· getAnimFrameBase.
	
	
	
	
	
	
	
	
	
	
	
	
	