@@ -5,7 +5,6 @@
 	· Detonator usage doesn't work.
 	· Fix rain maybe.
 	· Fix boat sound.
-	· Remove max custom animation limitation.
 
 - v1.0.6:
 	· Sometimes the AI death anim aren't fully synced and they get stuck in the middle.
