@@ -1,7 +1,7 @@
 #pragma once
 
 bool load_level();
-bool S_LoadGameFlow(const char* filename);
+bool load_gameflow(const char* filename);
 void unload_level();
 
-int16_t load_animation(const char* filename);
+int16_t load_animation(const std::string& filename);
