@@ -441,57 +441,6 @@ enum static_types
 	DEBRIS7,
 	DEBRIS8,
 	DEBRIS9,
-	EXTRA0,
-	EXTRA1,
-	EXTRA2,
-	EXTRA3,
-	EXTRA4,
-	EXTRA5,
-	EXTRA6,
-	EXTRA7,
-	EXTRA8,
-	EXTRA9,
-	EXTRA10,
-	EXTRA11,
-	EXTRA12,
-	EXTRA13,
-	EXTRA14,
-	EXTRA15,
-	EXTRA16,
-	EXTRA17,
-	EXTRA18,
-	EXTRA19,
-	EXTRA20,
-	EXTRA21,
-	EXTRA22,
-	EXTRA23,
-	EXTRA24,
-	EXTRA25,
-	EXTRA26,
-	EXTRA27,
-	EXTRA28,
-	EXTRA29,
-	EXTRA30,
-	EXTRA31,
-	EXTRA32,
-	EXTRA33,
-	EXTRA34,
-	EXTRA35,
-	EXTRA36,
-	EXTRA37,
-	EXTRA38,
-	EXTRA39,
-	EXTRA40,
-	EXTRA41,
-	EXTRA42,
-	EXTRA43,
-	EXTRA44,
-	EXTRA45,
-	EXTRA46,
-	EXTRA47,
-	EXTRA48,
-	EXTRA49,
-	EXTRA50,
 	NUMBER_STATIC_OBJECTS
 };
 
