@@ -182,6 +182,8 @@
 		· setMinecartTurnModifier.
 		· loadAnimation.
 		· getAnimFrameBase.
+		· setEngineExtendedAnimID.
+		· setEngineExtendedVehicleAnimIDs.
 	
 	
 	
